Add requirements.txt for Render deployment

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -353,7 +353,7 @@
     </a>
 
     <!-- GitHub -->
-    <a href="https://github.com/YOUR_USERNAME" 
+    <a href="https://github.com/jumannendaki9-crpto/Portfolio.git" 
        target="_blank" 
        class="btn" 
        style="background-color:#333; color:white; margin-right:5px;">
